[package]
name = "txtorbot"
version = "0.1.0"
authors = ["handlerug <umar@handlerug.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
seahash = "4.1.0"
teloxide = { version = "0.4", features = ["auto-send"] }
tokio = { version = "1.3", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.5"
